src/types/tests/snapshots/tgbot__types__tests__message__proximity_alert_triggered.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "proximity_alert_triggered": {
    "distance": 100,
    "traveler": {
      "first_name": "User 1",
      "id": 1,
      "is_bot": false
    },
    "watcher": {
      "first_name": "User 2",
      "id": 2,
      "is_bot": false
    }
  }
}
