src/types/tests/snapshots/tgbot__types__tests__message__refunded_payment.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "refunded_payment": {
    "currency": "RUB",
    "invoice_payload": "payload",
    "telegram_payment_charge_id": "charge-id",
    "total_amount": 100
  }
}
