src/types/tests/snapshots/tgbot__types__tests__message__send_message-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "allow_paid_broadcast": true,
  "business_connection_id": "id",
  "callback_query_id": "cqid",
  "chat_id": 1,
  "direct_messages_topic_id": 1,
  "disable_notification": true,
  "entities": [
    {
      "length": 2,
      "offset": 0,
      "type": "bold"
    }
  ],
  "link_preview_options": {
    "is_disabled": true
  },
  "message_effect_id": "effect-id",
  "message_thread_id": 1,
  "protect_content": true,
  "receiver_user_id": 999,
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "suggested_post_parameters": {},
  "text": "text"
}
