src/types/tests/snapshots/tgbot__types__tests__message__send_message.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "text": "text"
}
