src/types/tests/snapshots/tgbot__types__tests__message__stop_message_live_location-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "chat_id": 1,
  "message_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  }
}
