src/types/tests/snapshots/tgbot__types__tests__message__stop_message_live_location-3.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "inline_message_id": "msg-id"
}
