src/types/tests/snapshots/tgbot__types__tests__message__successful_payment.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "successful_payment": {
    "currency": "RUB",
    "invoice_payload": "invoice payload",
    "provider_payment_charge_id": "provider-charge-id",
    "telegram_payment_charge_id": "tg-charge-id",
    "total_amount": 145
  }
}
